ajouté: catalogue des jeux version2 avec un layout MatGridList, fixé: importation correcte du module MatGridListModule, retiré: 'ligne de constructions', todo: supprimer la scrollbar du sidenav ?

--- a/src/app/components/left-side/personnal-gamelist/personnal-gamelist.component.css
+++ b/src/app/components/left-side/personnal-gamelist/personnal-gamelist.component.css
@@ -7,24 +7,24 @@
 }  
 
 .image-et-titre {
- 
     display:inline-block;    
     z-index: 1;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
 }
 
+/* au passage de la souris sur un jeu du menu */
 .image-et-titre:hover {
     background-color: rgb(53, 118, 238);
 }
 
 .titre {
     display: inline-block;
-    border: 1px solid green;
+    /* border: 1px solid green; */
     color: whitesmoke;
 }
 
-.icone {
-    /* position: relative; */
+/* .icone { 
+    position: relative;
     border: 1px solid slateblue;
 }
-
+*/
